// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > matches the snapshot for the horizontal orientation 1`] = `
<div
  class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
  data-orientation="horizontal"
  data-slot="separator"
  role="none"
/>
`;

exports[`Separator > matches the snapshot for the vertical orientation 1`] = `
<div
  class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
  data-orientation="vertical"
  data-slot="separator"
  role="none"
/>
`;
